--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -10,6 +10,7 @@
     "com.unity.ide.vscode": "1.2.5",
     "com.unity.multiplayer-hlapi": "1.0.8",
     "com.unity.purchasing": "4.1.5",
+    "com.unity.renderstreaming": "3.0.1-preview",
     "com.unity.test-framework": "1.1.31",
     "com.unity.textmeshpro": "2.1.6",
     "com.unity.timeline": "1.2.18",
