--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -16,7 +16,7 @@
     "com.unity.timeline": "1.2.18",
     "com.unity.toolchain.win-x86_64-linux-x86_64": "2.0.2",
     "com.unity.ugui": "1.0.0",
-    "com.unity.xr.legacyinputhelpers": "2.1.9",
+    "com.unity.xr.googlevr.android": "2.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
